k8s-manifests/tutor/meili.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: openedx
spec:
  ports:
    - port: 7700
      targetPort: 7700
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: meilisearch
  namespace: openedx
subsets:
  - addresses:
      - ip: 10.0.5.90
    ports:
      - port: 7700
