k8s-manifests/tutor/memcached.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  namespace: openedx
  labels:
    app: memcached
spec:
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
      - name: memcached
        image: memcached:alpine
        ports:
        - containerPort: 11211
        args: ["-m", "64", "-o", "modern"]
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
  namespace: openedx
spec:
  selector:
    app: memcached
  ports:
  - port: 11211
    targetPort: 11211
