k8s-manifests/tutor/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openedx-ingress
  namespace: openedx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: lms.biolnks.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lms
            port:
              number: 8000
  - host: cms.biolnks.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cms
            port:
              number: 8000
